src/Style/media.scss
@media only screen and (min-width: 1024px) and (orientation: portrait) {
    .map.mapboxgl-map {
        margin: 0!important;
    }
    .my-step h3 {
        width: auto;
        font-weight: normal;
    }
}

@media only screen and (max-width: 425px) and (orientation: portrait) {
    .my-step {
        margin: 0!important;
        padding: 20px;
        & h2 {
            width: 300px;
        }
        & h3 {
            font-size: 18px;
            text-align: justify;
        }
    }
    .consultation .step1 {
        padding: 20px;
    }
    .mindset-info {
        padding: 20px;
    }
    section.approach-description>div,
    section.about-mindset {
        margin-bottom: 0!important;
    }
    div.matteo {
        left: 2%;
        top: 350px;
        & h2.training {
            font-size: 5.1vh;
        }
    }
    section.landing-page1,
    img.nutrition-coaching,
    img.training-pic,
    img.mindset,
    img.home-mobile {
        height: 36vh!important;
    }
    img.home {
        display: none;
    }
    img.home-mobile {
        display: block;
    }
    .matteo h1,
    .matteo h2 {
        display: none
    }
    h2.training,
    h2.nutrition,
    h2.mindset {
        display: block;
    }
    // h4 {
    //     margin-top: 0px;
    // }
    h4.offerta {
        margin-top: 0;
    }
    .offer {
        padding: 35px;
    }
    .offers {
        padding: 5px!important;
        width: auto;
    }
    .info-servizi p,
    .personal-credo p {
        width: 78.125vw!important;
    }
    .landing-page {
        padding-bottom: 30vh!important;
    }
}

@media only screen and (max-width: 320px) and (orientation: portrait) {
    .offer {
        padding: 60px;
    }
    section.training-offer {
        height: auto;
    }
    section.free-consultation {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;
        padding: 20px;
        margin-bottom: 80px;
    }
    .newclient {
        height: 260px;
        margin: 0 auto;
    }
    p.client {
        background-color: green;
        width: 239px;
        height: 70px;
        text-align: center;
        padding: 0 auto;
        color: white;
        padding-top: 12px;
        transform: skewY(-10deg);
        z-index: 3;
        position: relative;
        font-size: 30px;
    }
    p.special-offer {
        background-color: red;
        width: 143px;
        height: 70px;
        text-align: center;
        color: white;
        padding-top: 12px;
        transform: skewY(7deg);
        margin: -19px 0px 0px 66px;
        z-index: 2;
        position: relative;
        font-size: 30px;
    }
    p.speciale {
        background-color: yellow;
        width: 141px;
        height: 70px;
        text-align: center;
        color: white;
        padding-top: 12px;
        transform: skewY(-10deg);
        font-size: 30px;
    }
    .info-consultation {
        width: 600px;
        text-align: justify;
        line-break: auto;
    }
    p {
        line-height: 2rem;
    }
    h5 {
        font-size: 26px;
    }
    .opzioni {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: space-around;
        margin-bottom: 50px;
        padding: 20px;
    }
    .info-servizi {
        display: flex;
        flex-direction: column;
        align-items: center;
        text-align: justify;
        margin: 0 auto;
        width: 90vw;
    }
    .landing-page {
        padding-bottom: 60vh!important;
    }
}

